@@ -138,21 +138,6 @@ If enabled PacketFence will monitor DHCP option82 location-based information.
 This feature is only available if the dhcpdetector is activated.
 EOT
 
-[network.named]
-type=toggle
-options=enabled|disabled
-description=<<EOT
-If enabled, run a nameserver locally.  Combined with a 53/udp redirection port, this can allow you redirect clients based on 
-name resolution versus HTTP interception.  There are several caveats to keep in mind, First, many clients cache DNS 
-responses which may interrupt connectivity even after successful registration/remediation.  Second, in practice we've 
-noticed issues with the local nameserver refusing to answer queries in some cases - this may be related to 
-netfilter connection tracking.
-
-If you're running DHCP locally, though, it may make sense to run a nameserver locally as well rather than defining external 
-servers to passthrough.  Not that running either DHCP or DNS on a arp deployed PF system establishes dependencies on it 
-that are likely not wanted.
-EOT
-
 [network.rogueinterval]
 type=numeric
 description=<<EOT
@@ -174,12 +159,6 @@ EOT
 type=text
 description=<<EOT
 Location of the apache binary.  Only necessary to change if you are not running the RPMed version.
-EOT
-
-[services.named]
-type=text
-description=<<EOT
-Location of the named binary.  Only necessary to change if you are not running the RPMed version. 
 EOT
 
 [services.dhcpd]
