@@ -1,10 +1,0 @@
-$TTL	86400
-@       IN      SOA     localhost. root.localhost.  (
-                                      1997022700 ; Serial
-                                      28800      ; Refresh
-                                      14400      ; Retry
-                                      3600000    ; Expire
-                                      86400 )    ; Minimum
-              IN      NS      localhost.
-
-1       IN      PTR     localhost.
