@@ -1,48 +1,0 @@
-# This file is generated from a template at %%template%%
-# Any changes made to this file will be lost on restart 
-
-options {
-	directory "%%install_dir%%/conf/named";
-	pid-file "%%install_dir%%/var/named.pid";
-	/*
-	 * If there is a firewall between you and nameservers you want
-	 * to talk to, you might need to uncomment the query-source
-	 * directive below.  Previous versions of BIND always asked
-	 * questions using port 53, but BIND 8.1 uses an unprivileged
-	 * port by default.
-	 */
-	// query-source address * port 53;
-};
-
-key pf {
-  algorithm "hmac-md5";
-  secret "KTMl5kgxj9WERwjWbkNBz9xYZcCkoPd13VXsEwKtFcg8mD78AMJknNAdArXG";
-};
-
-controls {
-  inet 127.0.0.1 allow { pf; } keys { pf; };
-};
-
-acl pf {
-  127.0.0.1;
-};
-
-zone "microsoft.com" { type forward; forwarders { %%dnsservers%%; }; forward only; };
-
-zone "." IN {
-	type hint;
-	file "named.ca";
-};
-
-zone "localhost" IN {
-	type master;
-	file "localhost.zone";
-	allow-update { none; };
-};
-
-zone "0.0.127.in-addr.arpa" IN {
-	type master;
-	file "named.local";
-	allow-update { none; };
-};
-
