@@ -59,7 +59,6 @@
 <p><b>[network]</b><br>
   <a href='network.html#dhcpdetector'>dhcpdetector</a><br>
   <a href='network.html#mode'>mode</a><br>
-  <a href='network.html#named'>named</a><br>
   <a href='network.html#rogueinterval'>rogueinterval</a><br>
 <p><b>[passthroughs]</b><br>
 This section allows you to create passthroughs to HTML content or remote addresses/networks.  Here's an example:
@@ -118,7 +117,6 @@ The Stinger utility could then be accessed at https://pfhostname/proxies/tools/s
 <p><b>[services]</b><br>
   <a href='services.html#dhcpd'>dhcpd</a><br>
   <a href='services.html#httpd'>httpd</a><br>
-  <a href='services.html#named'>named</a><br>
   <a href='services.html#snmptrapd'>snmptrapd</a><br>
   <a href='services.html#snort'>snort</a><br>
 <p><b>[servicewatch]</b><br>
