@@ -29,19 +29,6 @@ When deployed in arp mode, PacketFence uses ARP manipulation inject itself into 
 trapped nodes.  You can read more about the mechanics of ARP manipulation <a 
 href="http://www.packetfence.org/dokuwiki/doku.php?id=faq#what_is_arp_manipulation_aka_poisoning_or_spoofing">here</a>. The major failing of arp mode is that 
 it's not 100% in catching all traffic - spurious packets can and will occasionaly get through.<p>
-<a name=named></a>
-<b>named</b> <i>(toggle)</i><br>
-Default: disabled<br>
-Options: enabled|disabled<br>
-If enabled, run a nameserver locally.  Combined with a 53/udp redirection port, this can allow you redirect clients based on 
-name resolution versus HTTP interception.  There are several caveats to keep in mind, First, many clients cache DNS 
-responses which may interrupt connectivity even after successful registration/remediation.  Second, in practice we've 
-noticed issues with the local nameserver refusing to answer queries in some cases - this may be related to 
-netfilter connection tracking.
-<p>
-If you're running DHCP locally, though, it may make sense to run a nameserver locally as well rather than defining external 
-servers to passthrough.  Note that running either DHCP or DNS on a arp deployed PF system establishes dependencies on it 
-that are likely not wanted.<p>
 <a name=rogueinterval></a>
 <b>rogueinterval</b> <i>(numeric)</i><br>
 Default: 1<br>
