@@ -14,10 +14,6 @@ Location of the dhcpd binary.  Only necessary to change if you are not running t
 <b>httpd</b> <i>(text)</i><br>
 Default: /usr/sbin/httpd<br>
 Location of the apache binary.  Only necessary to change if you are not running the RPMed version.<p>
-<a name=named></a>
-<b>named</b> <i>(text)</i><br>
-Default: /usr/sbin/named<br>
-Location of the named binary.  Only necessary to change if you are not running the RPMed version.<p>
 <a name=snmptrapd></a>
 <b>snmptrapd</b> <i>(text)</i><br>
 Default: /usr/sbin/snmptrapd<br>
